CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(cinatra)

OPTION(ENABLE_OPENSSL "Enable use of OpenSSL for https" ON)

SET(CMAKE_VERBOSE_MAKEFILE ON)


FIND_PACKAGE(Boost 1.55 COMPONENTS coroutine context system  REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
FIND_PACKAGE (Threads)
INCLUDE_DIRECTORIES(include)
SET(EXTRA_LIBS ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})


IF (ENABLE_OPENSSL)
	FIND_PACKAGE(OpenSSL)
	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
	SET(EXTRA_LIBS ${EXTRA_LIBS} ${OPENSSL_LIBRARIES})
	MESSAGE(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
ENDIF()

SET(CMAKE_CXX_COMPILER clang++)
ADD_COMPILE_OPTIONS("-std=c++11")
ADD_COMPILE_OPTIONS("-Wall")
ADD_COMPILE_OPTIONS("-Wextra")

IF (WIN32)
	SET(EXTRA_LIBS ${EXTRA_LIBS} ws2_32 mswsock)
ENDIF()

SUBDIRS(
	examples
	test
)

ADD_CUSTOM_TARGET(debug
	COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug ${CMAKE_SOURCE_DIR}
	COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
	COMMENT "Switch CMAKE_BUILD_TYPE to Debug"

)
ADD_CUSTOM_TARGET(release
	COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
	COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
	COMMENT "Switch CMAKE_BUILD_TYPE to Release"
)
