ADD_EXECUTABLE(file_upload main.cpp)
INCLUDE_DIRECTORIES(../../include)
IF(APPLE)
    TARGET_LINK_LIBRARIES(file_upload boost_system-mt pthread boost_coroutine-mt boost_context-mt boost_thread-mt ssl crypto)
ELSEIF(WIN32)
    TARGET_LINK_LIBRARIES(file_upload boost_system pthread boost_coroutine boost_context boost_thread ssl crypto ws2_32 mswsock)
ELSE()
    TARGET_LINK_LIBRARIES(file_upload boost_system pthread boost_coroutine boost_context boost_thread ssl crypto)
ENDIF()
