ADD_EXECUTABLE(hello_world main.cpp)
INCLUDE_DIRECTORIES(../../include)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	TARGET_LINK_LIBRARIES(hello_world boost_system-mt pthread boost_coroutine-mt boost_context-mt boost_thread-mt)
ELSE(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	TARGET_LINK_LIBRARIES(hello_world boost_system pthread boost_coroutine boost_context boost_thread)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
