ADD_EXECUTABLE(http_server main.cpp)
INCLUDE_DIRECTORIES(../../include)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	TARGET_LINK_LIBRARIES(http_server boost_coroutine-mt boost_context-mt boost_system-mt boost_thread-mt pthread)
ELSE(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	TARGET_LINK_LIBRARIES(http_server boost_coroutine boost_context boost_system boost_thread pthread)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
