ADD_EXECUTABLE(http_server main.cpp)
ADD_DEFINITIONS(-DCINATRA_ENABLE_HTTPS)
FIND_PACKAGE(OpenSSL)
TARGET_LINK_LIBRARIES(http_server ${OPENSSL_LIB})
INCLUDE_DIRECTORIES(../../include)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	TARGET_LINK_LIBRARIES(http_server boost_coroutine-mt boost_context-mt boost_system-mt boost_thread-mt pthread ssl crypto)
ELSE(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	TARGET_LINK_LIBRARIES(http_server boost_coroutine boost_context boost_system boost_thread pthread ssl crypto)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
